ui/single/resources-cfg.stderr
error: duplicate lang item in crate `panic_halt` (which `$CRATE` depends on): `panic_impl`.
  |
  = note: the lang item is first defined in crate `std` (which `$CRATE` depends on)
  = note: first definition in `std` loaded from /usr/share/rust/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-f14aca24435a5414.rlib
  = note: second definition in `panic_halt` loaded from $DIR/target/tests/target/x86_64-unknown-linux-gnu/debug/deps/libpanic_halt-33949299fdfa2375.rmeta

error[E0609]: no field `o1` on type `app::initResources<'_>`
  --> $DIR/resources-cfg.rs:47:21
   |
47 |         c.resources.o1;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o4` on type `app::initResources<'_>`
  --> $DIR/resources-cfg.rs:48:21
   |
48 |         c.resources.o4;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o5` on type `app::initResources<'_>`
  --> $DIR/resources-cfg.rs:49:21
   |
49 |         c.resources.o5;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o6` on type `app::initResources<'_>`
  --> $DIR/resources-cfg.rs:50:21
   |
50 |         c.resources.o6;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s3` on type `app::initResources<'_>`
  --> $DIR/resources-cfg.rs:51:21
   |
51 |         c.resources.s3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o2` on type `app::idleResources<'_>`
  --> $DIR/resources-cfg.rs:58:21
   |
58 |         c.resources.o2;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o4` on type `app::idleResources<'_>`
  --> $DIR/resources-cfg.rs:59:21
   |
59 |         c.resources.o4;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s1` on type `app::idleResources<'_>`
  --> $DIR/resources-cfg.rs:60:21
   |
60 |         c.resources.s1;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s3` on type `app::idleResources<'_>`
  --> $DIR/resources-cfg.rs:61:21
   |
61 |         c.resources.s3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o3` on type `app::uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:68:21
   |
68 |         c.resources.o3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s1` on type `app::uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:69:21
   |
69 |         c.resources.s1;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s2` on type `app::uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:70:21
   |
70 |         c.resources.s2;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s3` on type `app::uart0Resources<'_>`
  --> $DIR/resources-cfg.rs:71:21
   |
71 |         c.resources.s3;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `s2` on type `app::uart1Resources<'_>`
  --> $DIR/resources-cfg.rs:76:21
   |
76 |         c.resources.s2;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`

error[E0609]: no field `o5` on type `app::uart1Resources<'_>`
  --> $DIR/resources-cfg.rs:77:21
   |
77 |         c.resources.o5;
   |                     ^^ unknown field
   |
   = note: available fields are: `__marker__`
